force-app/main/default/objects/OCX_Feature_Template__c/OCX_Feature_Template__c.object-meta.xml
<CustomObject>
    <description>Reusable formula/archetype for Direct Experience, Profile, and Cohort-derived features.</description>
    <label>Feature Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>