force-app/main/default/objects/OCX_Feature_Template__c/fields/Archetype__c.field-meta.xml
<CustomField>
    <fullName>Archetype__c</fullName>
    <label>Metric Archetype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>