force-app/main/default/objects/OCX_Feature_Template__c/fields/Cohort_Suitability_Prior__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Suitability_Prior__c</fullName>
    <label>Cohort Suitability Prior</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>