force-app/main/default/objects/OCX_Feature_Template__c/fields/Default_Bucketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Default_Bucketing_Strategy__c</fullName>
    <label>Default Bucketing Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>