force-app/main/default/objects/OCX_Feature_Template__c/fields/Default_Windows__c.field-meta.xml
<CustomField>
    <fullName>Default_Windows__c</fullName>
    <label>Default Windows</label>
    <length>120</length>
    <type>Text</type>
</CustomField>