force-app/main/default/objects/OCX_Feature_Template__c/fields/Dictionary_Version__c.field-meta.xml
<CustomField>
    <fullName>Dictionary_Version__c</fullName>
    <label>Dictionary Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>