force-app/main/default/objects/OCX_Feature_Template__c/fields/Evidence_Basis__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Basis__c</fullName>
    <label>Evidence Basis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>