force-app/main/default/objects/OCX_Feature_Template__c/fields/Explainability_Prior__c.field-meta.xml
<CustomField>
    <fullName>Explainability_Prior__c</fullName>
    <label>Explainability Prior</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>