force-app/main/default/objects/OCX_Feature_Template__c/fields/Formula_Template__c.field-meta.xml
<CustomField>
    <fullName>Formula_Template__c</fullName>
    <label>Formula Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>