force-app/main/default/objects/OCX_Feature_Template__c/fields/Historical_Prior_Score__c.field-meta.xml
<CustomField>
    <fullName>Historical_Prior_Score__c</fullName>
    <label>Historical Prior Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>