force-app/main/default/objects/OCX_Feature_Template__c/fields/Measurement_Concept_Key__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Concept_Key__c</fullName>
    <label>Measurement Concept Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>