force-app/main/default/objects/OCX_Feature_Template__c/fields/Predictive_Prior__c.field-meta.xml
<CustomField>
    <fullName>Predictive_Prior__c</fullName>
    <label>Predictive Prior</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>