force-app/main/default/objects/OCX_Feature_Template__c/fields/Primary_Theme_Key__c.field-meta.xml
<CustomField>
    <fullName>Primary_Theme_Key__c</fullName>
    <label>Primary Theme Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>