force-app/main/default/objects/OCX_Feature_Template__c/fields/Required_Ingredient_Roles__c.field-meta.xml
<CustomField>
    <fullName>Required_Ingredient_Roles__c</fullName>
    <label>Required Ingredient Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>