force-app/main/default/objects/OCX_Feature_Template__c/fields/Target_Feature_Class__c.field-meta.xml
<CustomField>
    <fullName>Target_Feature_Class__c</fullName>
    <label>Target Feature Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>