force-app/main/default/objects/OCX_Feature_Template__c/fields/Template_Key__c.field-meta.xml
<CustomField>
    <fullName>Template_Key__c</fullName>
    <externalId>true</externalId>
    <label>Template Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>